Small fix summary card flicker

--- a/src/views/DataExploration/components/PageContent/tabs/Summary/index.module.scss
+++ b/src/views/DataExploration/components/PageContent/tabs/Summary/index.module.scss
@@ -9,3 +9,7 @@
 .summaryGrapCardCol {
     width: 100%;
 }
+
+.sunburstGraphCard {
+    min-height: 450px;
+}
